--- a/bot.config
+++ b/bot.config
@@ -1,9 +1,10 @@
 [irc]
-nickname = Pysen
-username = pysen
+nickname = PyseN^
+username = PyseN^
 realname = PysenBot v0.1
 server = dk.quakenet.org
 port = 6667
 admins = BiohZn
 channels = #mustis.dev
+trigger = &
 
