--- a/bot.config.example
+++ b/bot.config.example
@@ -4,6 +4,10 @@ username = PyseN^
 realname = PysenBot v0.1
 server = dk.quakenet.org
 port = 6667
+
+authname =
+authpass =
+
+trigger = &
 admins = AdminAuth
 channels = #channel
-trigger = &
