--- a/bot.config.example
+++ b/bot.config.example
@@ -1,7 +1,7 @@
 [irc]
-nickname = PyseN^
-username = PyseN^
-realname = PysenBot v0.1
+nick = PyseN^
+user = PyseN^
+real = PysenBot v0.1
 server = dk.quakenet.org
 port = 6667
 
